# Eco_Lab1

./: CMakeLists.txt  Flags_trimmer.py
SharedFiles/: IEcoLab1.h
SourceFiles/: CEcoLab1.c
UnitTestFiles/SourceFiles/: EcoLab1.c
